--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -20,7 +20,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Change my password", class:"btn-light" %>
+    <%= f.button :submit, "Change my password", class:"devise-links" %>
   </div>
 <% end %>
 
