--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,51 +1,35 @@
-<h1 class="py-2">Edit Profile</h1>
+<div class="edit-page">
+  <% if @user.artist == false %>
+    <div class="profile-edit">
+      <%= simple_form_for @user do |f| %>
+        <%= f.input :user_name %>
+        <%= f.input :password %>
+        <%= f.input :email %>
+        <%= f.input :avatar, as: :file %>
+        <%= f.input :artist %>
+        <%= f.submit "Update details" %>
+      <% end %>
+    </div>
 
-<div class="edit-form-user d-flex">
-<% if @user.artist == false %>
-  <%= simple_form_for @user do |f| %>
-    <%= f.input :user_name %>
-    <%= f.input :password %>
-    <%= f.input :email %>
-    <%= f.input :avatar, as: :file %>
-    <%= f.input :artist %>
-    <%= f.submit "Update details" %>
+  <% else %>
+    <div class="profile-edit">
+      <%= simple_form_for @user do |f| %>
+        <%= f.input :user_name %>
+        <%= f.input :password %>
+        <%= f.input :email %>
+        <%= f.input :avatar, as: :file %>
+        <%= f.input :artist, label: "I am an artist"%>
+    </div>
+    <div class="profile-artist">
+        <%= f.input :artist_name %>
+        <%= f.input :location %>
+        <%= f.input :description %>
+        <%= f.input :genre %>
+        <%= f.input :price %>
+        <%= f.input :spotify_link %>
+        <%= f.input :photo, as: :file %>
+        <%= f.submit "Update details" %>
+      <% end %>
+    </div>
   <% end %>
-
-<% else %>
-  <%= simple_form_for @user do |f| %>
-    <%= f.input :user_name %>
-    <%= f.input :password %>
-    <%= f.input :email %>
-    <%= f.input :avatar, as: :file %>
-    <%= f.input :artist, label: "I am an artist"%>
-    <%= f.input :artist_name %>
-    <%= f.input :location %>
-    <%= f.input :description %>
-    <%= f.input :genre %>
-    <%= f.input :price %>
-    <%= f.input :spotify_link %>
-    <%= f.input :photo, as: :file %>
-    <%= f.submit "Update details" %>
-  <% end %>
-<% end %>
 </div>
-
-<!-- create_table "users", force: :cascade do |t|
-    t.string "email", default: "", null: false
-    t.string "encrypted_password", default: "", null: false
-    t.string "reset_password_token"
-    t.datetime "reset_password_sent_at"
-    t.datetime "remember_created_at"
-    t.datetime "created_at", precision: 6, null: false
-    t.datetime "updated_at", precision: 6, null: false
-    t.string "user_name"
-    t.string "avatar", default: "../../app/assets/images/default.png"
-    t.boolean "artist", default: false
-    t.string "artist_name"
-    t.string "location"
-    t.string "genre"
-    t.integer "price"
-    t.string "photo", default: "../../app/assets/images/default.png"
-    t.text "description"
-    t.index ["email"], name: "index_users_on_email", unique: true
-    t.index ["reset_password_token"], name: "index_users_on_reset_password_token", unique: true -->
