--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -35,7 +35,6 @@
     justify-content: space-between;
     align-items: center;
     margin: 0;
-    // overflow: hidden;
     height: 3rem;
   }
 
@@ -64,3 +63,57 @@
     }
   }
 }
+
+  .user-card {
+    background-color: rgba(255, 255, 255, 0.15);
+    padding: 16px;
+
+    h1 {
+      font-family: $sub-title;
+      padding-bottom: 16px;
+    }
+
+    h3 {
+      padding-top: 16px;
+      font-family: $sub-title;
+    }
+    .user-card-top {
+      display: flex;
+    }
+
+    .user-card-image {
+      width: 15rem;
+      height: 15rem;
+      background-size: cover;
+      border-radius: 50%;
+      background-position: center;
+    }
+
+    .user-card-top-right {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-left: 32px;
+      position: relative;
+      a {
+        position: absolute;
+        top: 0;
+        right:0;
+      }
+    }
+
+    .user-card-top-details {
+
+    }
+
+    .user-card-break {
+      border-bottom: 1px solid white;
+    }
+
+    .user-card-bottom {
+      padding-top: 16px;
+      text-align: center;
+    }
+  }
+
+
