--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,11 +1,14 @@
-
-
-
-<div class="booking-form">
-  <%= simple_form_for([@artist, @booking]) do |f|%>
-    <%= f.input :artist_id, as: :hidden, input_html: { value: @artist.id } %>
-    <%= f.input :date %>
-    <p><%= @error_message %></p>
-    <%= f.button :submit, class: "btn btn-light" %>
-  <% end %>
+<div class="log-in">
+  <div class="log-in-box">
+    <div class="form-inputs">
+      <%= simple_form_for([@artist, @booking]) do |f|%>
+        <%= f.input :artist_id, as: :hidden, input_html: { value: @artist.id } %>
+        <%= f.input :date %>
+        <p><%= @error_message %></p>
+        <%= f.button :submit, class: "btn-light" %>
+      <% end %>
+    </div>
+  </div>
 </div>
+
+
