--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -38,6 +38,12 @@
     height: 3rem;
   }
 
+  .card-location-and-rating {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   .card-location {
     font-size: 14px;
     opacity: 0.7;
