--- a/app/views/shared/_userprofile.html.erb
+++ b/app/views/shared/_userprofile.html.erb
@@ -4,7 +4,11 @@
     <div class="card-small">
       <% @user.photo.attached? ? photo_key = @user.photo.key : photo_key = "by547qwzb0s6o2qefa0i31o7fpeb"%>
       <div class="show-image" style="background-image: url('https://res.cloudinary.com/dyyo3sihs/image/upload/v1582723530/<%= photo_key %>')">
-        <%= link_to "Book now", new_user_booking_path(@user), class: "btn-light-lrg" %>
+        <% if  @user == current_user%>
+          <%= link_to "Edit profile", edit_user_path(@user), class: "btn-light-lrg" %>
+          <% else %>
+         <%= link_to "Book now", new_user_booking_path(@user), class: "btn-light-lrg" %>
+         <% end %>
       </div>
       <div class="card-body">
         <div class="card-text">
