--- a/app/views/shared/_userbookings.html.erb
+++ b/app/views/shared/_userbookings.html.erb
@@ -1,26 +1,26 @@
 <% if @user.artist %>
-  <h4><strong>Bookings</strong></h4>
-  <% if @user.booked.length == 0 %>
-    <h5>You haven't been booked yet...</h5>
-    <h5> -------------- </h5>
-  <% else %>
-  <% end %>
   <div class="artist-booked">
-    <% @user.booked.each do |booking| %>
-      <div class="card-product">
-        <% booking.user.avatar.attached? ? user_avatar_key = booking.user.avatar.key : user_avatar_key = "e1tikr33400esm4prcouknjq4xzc"%>
-        <img src="https://res.cloudinary.com/dyyo3sihs/image/upload/v1582723530/<%= user_avatar_key %>">
-        <div class="card-product-infos">
-          <h2><%= booking.user.user_name %></h2>
-          <p><%= booking.date %></p>
-          <%= simple_form_for(booking) do |f| %>
-            <%= f.input :confirmed, label: "Confirm booking", label_html: { class: 'confirm-booking' } %>
-            <%= f.button :submit, label_html: { class: 'confirm-booking-submit' } %>
-          <% end %>
+    <% if @user.booked.length == 0 %>
+      <h4>You haven't been booked yet...</h4>
+    <% else %>
+      <h4>Your bookings</h4>
+      <% @user.booked.each do |booking| %>
+        <div class="card-product">
+          <% booking.user.avatar.attached? ? user_avatar_key = booking.user.avatar.key : user_avatar_key = "e1tikr33400esm4prcouknjq4xzc"%>
+          <img src="https://res.cloudinary.com/dyyo3sihs/image/upload/v1582723530/<%= user_avatar_key %>">
+          <div class="card-product-infos">
+            <h2><%= booking.user.user_name %></h2>
+            <p><%= booking.date %></p>
+            <%= simple_form_for(booking) do |f| %>
+              <%= f.input :confirmed, label: "Confirm booking", label_html: { class: 'confirm-booking' } %>
+              <%= f.button :submit, label_html: { class: 'confirm-booking-submit' }, class: "btn-light" %>
+            <% end %>
+          </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
   </div>
+
   <div class="user-booked">
     <h4><strong>Booked Arists</strong></h4>
     <% @user.bookings.each do |booking| %>
