--- a/app/views/shared/_userbookings.html.erb
+++ b/app/views/shared/_userbookings.html.erb
@@ -1,4 +1,5 @@
 <% if @user.artist %>
+<div class="bookings-container">
   <div class="artist-booked">
     <% if @user.booked.length == 0 %>
       <h4>You haven't been booked yet...</h4>
@@ -9,8 +10,7 @@
           <% booking.user.avatar.attached? ? user_avatar_key = booking.user.avatar.key : user_avatar_key = "e1tikr33400esm4prcouknjq4xzc"%>
           <img src="https://res.cloudinary.com/dyyo3sihs/image/upload/v1582723530/<%= user_avatar_key %>">
           <div class="card-product-infos">
-            <h2>Booked by <%= booking.user.user_name %></h2>
-            <p><%= booking.date %></p>
+            <h2>Booked by <%= booking.user.user_name %> for <%= booking.date %></h2>
             <%= simple_form_for(booking) do |f| %>
               <%= f.input :confirmed, label: "Confirm booking", label_html: { class: 'confirm-booking' } %>
               <%= f.button :submit, label_html: { class: 'confirm-booking-submit' }, class: "btn-light" %>
@@ -22,14 +22,13 @@
   </div>
 
   <div class="user-booked">
-    <h4><strong>Booked Arists</strong></h4>
+    <h4>Booked Arists</h4>
     <% @user.bookings.each do |booking| %>
     <div class="card-product">
       <% booking.artist.photo.attached? ? booking_photo_key = booking.artist.photo.key : booking_photo_key = "by547qwzb0s6o2qefa0i31o7fpeb"%>
       <img src="https://res.cloudinary.com/dyyo3sihs/image/upload/v1582723530/<%= booking_photo_key %>" />
       <div class="card-product-infos">
-        <h2><%= booking.artist.artist_name%></h2>
-        <p><strong><%= booking.date %></strong></p>
+        <h2>Booked <%= booking.artist.artist_name%> for <%= booking.date %></h2>
         <% if booking.confirmed  %>
           <p style="color: #FF0083;"><i class="fas fa-check-circle"></i> Confirmed</p>
         <% else %>
@@ -61,5 +60,6 @@
       </div>
     </div>
   <% end %>
+</div>
 <% end %>
 
