--- a/app/assets/stylesheets/pages/_show-page.scss
+++ b/app/assets/stylesheets/pages/_show-page.scss
@@ -78,3 +78,12 @@
   }
 }
 
+@media(max-width: 600px) {
+  .show-page {
+    grid-template-columns: 1fr;
+    .show-image {
+      height: 200px;
+    }
+  }
+}
+
