--- a/app/assets/stylesheets/components/_page-body.scss
+++ b/app/assets/stylesheets/components/_page-body.scss
@@ -1,9 +1,15 @@
 .page-body {
-  padding: 10vh 128px;
   background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("https://iso.500px.com/wp-content/uploads/2015/07/lombardo_cover.jpeg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   color: white;
-  min-height: 80vh;
+  min-height: 100vh;
+  width: 100%;
+}
+
+.page-container {
+  padding: 10vh 8vw;
+  max-width: 100vw;
 }
