--- a/app/assets/stylesheets/pages/_edit-page.scss
+++ b/app/assets/stylesheets/pages/_edit-page.scss
@@ -5,3 +5,9 @@
   grid-template-columns: 1fr 1fr;
   min-height: 80vh;
 }
+
+@media(max-width: 600px) {
+  .edit-page {
+    grid-template-columns: 1fr;
+  }
+}
