--- a/app/assets/stylesheets/pages/_listings.scss
+++ b/app/assets/stylesheets/pages/_listings.scss
@@ -11,9 +11,14 @@
 }
 
 .listings {
-  min-height: 80vh;
   display: grid;
-  grid-gap: 16px;
-  padding: 16px;
+  grid-gap: 2rem;
+  padding: 2rem;
   grid-template-columns: 1fr 1fr 1fr;
+}
+
+@media(max-width: 600px) {
+  .listings {
+    grid-template-columns: 1fr;
+  }
 }
