--- a/app/assets/stylesheets/components/_page-body.scss
+++ b/app/assets/stylesheets/components/_page-body.scss
@@ -1,9 +1,4 @@
 .page-body {
-  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("https://iso.500px.com/wp-content/uploads/2015/07/lombardo_cover.jpeg");
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   color: white;
   min-height: 100vh;
   width: 100%;
@@ -12,4 +7,21 @@
 .page-container {
   padding: 10vh 8vw;
   max-width: 100vw;
+}
+
+.back-image {
+  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("https://iso.500px.com/wp-content/uploads/2015/07/lombardo_cover.jpeg");
+  content:"";
+  position:fixed;
+  left:0;
+  top:0;
+  right:0;
+  bottom:0;
+  z-index:-1;
+  display:block;
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
