--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
   </head>
 
   <body>
+    <div class="back-image">
+    </div>
     <div class="page-body">
       <%= render "shared/navbar" %>
       <div class="page-container">
