--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,32 +1,27 @@
 <div class="navbar">
   <div class="navbar-left">
-    <%= link_to "turned up", root_path %>
-  </div>
-  <div class="navbar-center">
+    <%= link_to "turned up", root_path, class: "home-button" %>
     <%= render "shared/search" unless url_for == root_path %>
   </div>
   <div class="navbar-right">
     <% if current_user %>
-    <div class="navbar-user-name">
-      <h6><%= current_user.user_name %></h6>
-
-    </div>
-      <div class="dropdown">
-        <a class="" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <% current_user.avatar.attached? ? avatar_key = current_user.avatar.key : avatar_key = "e1tikr33400esm4prcouknjq4xzc"%>
-        <div class="navbar-user-photo" id="boots" style="background-image: url('https://res.cloudinary.com/dyyo3sihs/image/upload/v1582723530/<%= avatar_key.html_safe %>')">
-        </div>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-          <%= link_to "Profile", user_path(current_user), class: "dropdown-item" %>
-          <div class="dropdown-divider">
-          </div>
-          <%= link_to "Sign out", destroy_user_session_path, method:"delete", class: "dropdown-item" %>
-        </div>
+      <div class="navbar-user-name">
+        <h6><%= current_user.user_name %></h6>
       </div>
+        <div class="dropdown">
+          <a class="" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <% current_user.avatar.attached? ? avatar_key = current_user.avatar.key : avatar_key = "e1tikr33400esm4prcouknjq4xzc"%>
+          <div class="navbar-user-photo" id="boots" style="background-image: url('https://res.cloudinary.com/dyyo3sihs/image/upload/v1582723530/<%= avatar_key.html_safe %>')">
+          </div>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+            <%= link_to "Profile", user_path(current_user), class: "dropdown-item" %>
+            <div class="dropdown-divider">
+            </div>
+            <%= link_to "Sign out", destroy_user_session_path, method:"delete", class: "dropdown-item" %>
+          </div>
+        </div>
     <% else %>
-    <%= link_to "Sign in", new_user_session_path, class: "btn-light"  %>
+      <%= link_to "Sign in", new_user_session_path, class: "btn-light"  %>
     <% end %>
   </div>
 </div>
-
-
