--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,8 +1,10 @@
-<%= form_tag users_path, method: :get do %>
-  <%= text_field_tag :query,
-    params[:query],
-    placeholder: "Find your headliner...",
-    class: "search-input"
-  %>
-  <%= submit_tag "Search", class: "btn-light" %>
-<% end %>
+<div class="search-bar">
+  <%= form_tag users_path, method: :get do %>
+    <%= text_field_tag :query,
+      params[:query],
+      placeholder: "Find your headliner...",
+      class: "search-input"
+    %>
+    <%= submit_tag "Search", class: "btn-light" %>
+  <% end %>
+</div>
