--- a/app/assets/stylesheets/components/_page-body.scss
+++ b/app/assets/stylesheets/components/_page-body.scss
@@ -1,12 +1,7 @@
 .page-body {
   color: white;
-  min-height: 100vh;
   width: 100%;
-}
-
-.page-container {
   padding: 10vh 8vw;
-  max-width: 100vw;
 }
 
 .back-image {
@@ -24,4 +19,11 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+@media(max-width: 576px) {
+  .page-body {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
 }
