--- a/app/assets/stylesheets/pages/_show-page.scss
+++ b/app/assets/stylesheets/pages/_show-page.scss
@@ -81,6 +81,8 @@
 @media(max-width: 600px) {
   .show-page {
     grid-template-columns: 1fr;
+    grid-gap: 16px 0px;
+    padding: 16px 0 0 0;
     .show-image {
       height: 200px;
     }
