pushing to heroku

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar">
+<div class="my-navbar">
   <div class="navbar-left">
     <%= link_to "turned up", root_path, class: "home-button" %>
     <%= render "shared/search" unless url_for == root_path %>
