--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,6 @@
-.navbar {
+.my-navbar {
   display: flex;
+  height: 10vh;
   justify-content: space-between;
   background-color: white;
   position: fixed;
