--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -5,6 +5,6 @@
       placeholder: "Find your headliner...",
       class: "search-input"
     %>
-    <%= submit_tag "Search", class: "btn-light" %>
+    <%= submit_tag "Search", class: "btn-light search-btn" %>
   <% end %>
 </div>
