pushing to heroku

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -64,9 +64,9 @@
 
 @media(max-width: 768px) {
 
-  .navbar {
-    padding-right: 8px;
-    padding-left: 8px;
+  .my-navbar {
+    padding-right: 16px;
+    padding-left: 16px;
   }
 
   .navbar-user-name {
