--- a/app/assets/stylesheets/pages/_user-profile.scss
+++ b/app/assets/stylesheets/pages/_user-profile.scss
@@ -13,7 +13,7 @@
   color: white;
   transition: 0.3s;
   border: 0px;
-  background-color: black;
+  background: none;
   &:hover {
     color: $pink;
     text-decoration: none;
@@ -25,7 +25,7 @@
   color: white;
   transition: 0.3s;
   border: 0px;
-  background-color: black;
+  background: none;
   &:hover {
     color: $pink;
     text-decoration: none;
